use autoboxing or Number.valueOf()